# syncthing-rs

./: Cargo.toml  README.md
examples/: event_printer.rs  system_info.rs
src/: client.rs  rest.rs  routes.rs  tests.rs
src/rest/: events.rs  noauth.rs  system.rs
src/rest/system/: connections.rs  error.rs  log.rs
