[package]
name = "syncthing"
version = "0.5.0"
authors = ["tfuxu <tfuxu@tutanota.com>", "Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2021"
description = "A Rust library for controlling syncthing file synchronization through its REST interface"
license = "MIT"
repository = "https://github.com/tfuxu/syncthing-rs"
categories = ["asynchronous", "concurrency", "network-programming"]
keywords = ["syncthing", "rest", "http", "async"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
http = "0.2"
hyper = {version = "0.14", features = ["http1", "tcp", "client", "backports", "deprecated"]}
anyhow = "1.0"
futures-core = "0.3"

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "event_printer"
path = "examples/event_printer.rs"

[[example]]
name = "system_info"
path = "examples/system_info.rs"
